[lworld] C2 compilation fails with assert "adr_type for memory phis only"

XMLWordPrintable

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/oracle/valhalla/open/src/hotspot/share/opto/cfgnode.cpp:1079), pid=495670, tid=495678
      # assert((_type == Type::MEMORY) == (_adr_type != __null)) failed: adr_type for memory phis only
      #
      # JRE version: Java(TM) SE Runtime Environment (18.0) (fastdebug build 18-lworld3ea+0-2021-10-13-0555356.tobias...)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 18-lworld3ea+0-2021-10-13-0555356.tobias..., compiled mode, compressed oops, compressed class ptrs, serial gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x89c1c9] PhiNode::verify_adr_type(bool) const [clone .part.0]+0x59

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: