8275276: [lworld] C2 compilation fails with assert "adr_type for memory phis only"